# openclaw-my-browser-operator

./: .gitignore  README.md  pyproject.toml
config/: openclaw.json
docs/: forum-post.md  tutorial.md
extension/: README.md  manifest.json
extension/background/: bridge.js  gateway.js  state.js  sw.js
extension/content/: relay.js
extension/panel/: panel.css  panel.html  panel.js
extension/popup/: popup.css  popup.html  popup.js
skill/: SKILL.md  browser_operator_skill.py  skill.json
src/browser_operator/: __init__.py  agent.py  cdp.py  cli.py  tools.py
